Style the home and details pages

--- a/src/Components/Homepage/Home.css
+++ b/src/Components/Homepage/Home.css
@@ -1,12 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
-
 .logo {
   width: 60px;
   height: 60px;
-}
-
-.name {
-  font-family: 'Poppins', sans-serif;
 }
 
 .main_list {
@@ -14,17 +8,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
   flex-wrap: wrap;
+  margin: 0 auto;
   gap: 1px;
+  background-color: rgb(217, 59, 154);
+}
+
+.arrow {
+  color: white;
 }
 
 .home_list {
-  border: 2px gray solid;
-  border-radius: 10px;
-  width: 160px;
-  height: 170px;
-  padding: 10px;
+  width: 165px;
+  height: 180px;
+  padding: 5px;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
@@ -42,4 +39,8 @@
 
 p {
   font-size: 15px;
+}
+
+.home_list:nth-child(even) {
+  background-color: rgb(201, 46, 139);
 }
