--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -3,12 +3,13 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem;
+  background-color: rgb(201, 46, 139);
 }
 
 .icon {
   font-size: 1.5rem;
   padding: 15px 3px 0;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
