--- a/src/Components/Homepage/Home.css
+++ b/src/Components/Homepage/Home.css
@@ -4,14 +4,28 @@
 }
 
 .main_list {
-  overflow: hidden;
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(auto-fit, minmax(165px, 1fr));
+  background-color: rgb(217, 59, 154);
+}
+
+.search_bar {
+  height: 220px;
+  background-color: rgb(201, 46, 139);
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   margin: 0 auto;
-  gap: 1px;
-  background-color: rgb(217, 59, 154);
+}
+
+.search {
+  padding: 20px;
+  width: 50%;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  font-size: 1.2rem;
 }
 
 .arrow {
@@ -19,9 +33,7 @@
 }
 
 .home_list {
-  width: 165px;
-  height: 180px;
-  padding: 5px;
+  padding: 10px;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
@@ -43,4 +55,24 @@ p {
 
 .home_list:nth-child(even) {
   background-color: rgb(201, 46, 139);
+}
+
+.block {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 680px) {
+  .main_list {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
+  .home_list {
+    height: 150px;
+  }
+
+  .logo {
+    margin-right: 50%;
+  }
 }
