--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -3,7 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem;
-  background-color: rgb(201, 46, 139);
+  /* background-color: rgb(6, 0, 15); */
 }
 
 .icon {
