--- a/src/Components/Homepage/Home.css
+++ b/src/Components/Homepage/Home.css
@@ -1,8 +1,11 @@
 .logo {
   width: 60px;
   height: 60px;
-  background-color: rgb(1, 18, 31);
   border-radius: 50%;
+}
+
+.blurry_logo {
+  background-color: white;
 }
 
 .main_list {
